--- a/BattleJop.Web/Components/Pages/Home.razor
+++ b/BattleJop.Web/Components/Pages/Home.razor
@@ -1,7 +1,18 @@
 ﻿@page "/"
+@using BlazorBootstrap
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hello, world!</h1> 
 
-Welcome to your new app.
+Welcome to  your n qsqdew app.
+
+<h1>Test</h1>
+<Card>
+    <CardBody>
+        <CardTitle>Card title</CardTitle>
+        <CardText>Some quick example text to build on the card title and make up the bulk of the card's content.</CardText>
+        <Button Color="ButtonColor.Primary" To="#" Type="ButtonType.Button">Go somewhere</Button>
+    </CardBody>
+</Card>
+
