--- a/BattleJop.Web/Components/Layout/NavMenu.razor
+++ b/BattleJop.Web/Components/Layout/NavMenu.razor
@@ -4,7 +4,7 @@
     </div>
 </div>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+<input type="checkbox" title="Navigation menu" class="navbar-toggler"/>
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="nav flex-column">
@@ -15,8 +15,8 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="tournoi">
-                <span class="bi bi-plus-square-fill" aria-hidden="true"></span> Tournoi
+            <NavLink class="nav-link" href="round">
+                <span class="bi bi-plus-square-fill" aria-hidden="true"></span> Manches
             </NavLink>
         </div>
 
