--- a/BattleJop.Web/wwwroot/app.css
+++ b/BattleJop.Web/wwwroot/app.css
@@ -54,3 +54,18 @@ h1:focus {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
     text-align: start;
 }
+
+.score-input {
+    max-width: 4rem;
+    text-align: center;
+}
+
+.modal-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-control:focus {
+    box-shadow: none;
+}
