--- a/BattleJop.Web/Components/Cards/MatchCard.razor.css
+++ b/BattleJop.Web/Components/Cards/MatchCard.razor.css
@@ -5,6 +5,15 @@
     align-items: center;
 }
 
+.match-button{
+    padding: 0.5rem;
+    border-radius: 0.375rem;
+}
+
+.start{
+    background-color: forestgreen
+}
+
 .container {
     display: flex;
     flex-direction: row;
