--- a/BattleJop.Web/Components/Layout/MainLayout.razor
+++ b/BattleJop.Web/Components/Layout/MainLayout.razor
@@ -1,9 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
+    @* <div class="sidebar">
         <NavMenu />
-    </div>
+    </div> *@
 
     <main>
         <article class="content px-4">
@@ -14,6 +14,6 @@
 
 <div id="blazor-error-ui">
     An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
+                <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
