--- a/BattleJop.Web/wwwroot/app.css
+++ b/BattleJop.Web/wwwroot/app.css
@@ -2,6 +2,12 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+html, body, #app {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 a, .btn-link {
     color: #006bb7;
 }
@@ -69,3 +75,18 @@ h1:focus {
 .form-control:focus {
     box-shadow: none;
 }
+
+.golden-button {
+    width: fit-content;
+    border: 0;
+    border-radius: 2rem;
+    padding: 1rem 2rem;
+    background-color: #b08d57;
+    transition: transform 250ms ease-in-out, box-shadow 250ms ease-in-out, background-color 250ms ease-in-out;
+}
+
+    .golden-button:active {
+        transform: scale(0.97);
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
+        background-color: #7b5e3c;
+    }
