--- a/Web/BattleJop.Web/Components/Cards/MatchCard.razor
+++ b/Web/BattleJop.Web/Components/Cards/MatchCard.razor
@@ -3,7 +3,7 @@
     <CardBody>
         <div class="container">
             <div class="team">
-                <p>@Match.Teams.ToArray()[0].Name</p>
+                @* <p>@Match.Teams.ToArray()[0].Name</p> *@
                 @* <p>@Match.Teams.ToArray()[0].Players.ToArray()[0].Name</p> *@
                 @* <p>@Match.Teams.ToArray()[0].Players.ToArray()[1].Name</p> *@
             </div>
@@ -11,7 +11,7 @@
                 @ScoreA - @ScoreB
             </div>
             <div class="team">
-                <p>@Match.Teams.ToArray()[1].Name</p>
+                @* <p>@Match.Teams.ToArray()[1].Name</p> *@
                 @* <p>@Match.Teams.ToArray()[1].Players.ToArray()[0].Name</p> *@
                 @* <p>@Match.Teams.ToArray()[1].Players.ToArray()[1].Name</p> *@
             </div>
