--- a/Web/BattleJop.Web/Components/Modals/EditScoreModal.razor
+++ b/Web/BattleJop.Web/Components/Modals/EditScoreModal.razor
@@ -2,9 +2,9 @@
     <BodyTemplate>
         <div class="wrapper">
             <div></div>
-            <div>@Match.Teams.ToArray()[0].Name</div>
+            @* <div>@Match.Teams.ToArray()[0].Name</div> *@
             <div>VS.</div>
-            <div>@Match.Teams.ToArray()[1].Name</div>
+            @* <div>@Match.Teams.ToArray()[1].Name</div> *@
             <div>Score</div>
             <div>
                 <NumberInput class="score-input" TValue="int" @bind-Value="@EditableScoreA" Max="13" Min="0" AllowNegativeNumbers="false"
