add dtos to web part

--- a/Web/BattleJop.Web/Components/Pages/Round/Round.razor
+++ b/Web/BattleJop.Web/Components/Pages/Round/Round.razor
@@ -8,8 +8,8 @@
 <h1>Manche @_round.RunningOrder</h1>
 
 <div class="round-grid">
-    @foreach (var match in _round.Matchs)
+    @foreach (var match in _round.Matches)
     {
-        <MatchCard Match="match" ScoreA="0" ScoreB="0"></MatchCard>
+        <MatchCard Match="match"></MatchCard>
     }
 </div>
