--- a/Web/BattleJop.Web/Components/Cards/MatchCard.razor
+++ b/Web/BattleJop.Web/Components/Cards/MatchCard.razor
@@ -1,22 +1,23 @@
 ﻿@using BattleJop.Web.Components.Modals
+@using BattleJop.Web.Enum
 <Card TextAlignment="Alignment.Center">
     <CardBody>
         <div class="container">
             <div class="team">
-                @* <p>@Match.Teams.ToArray()[0].Name</p> *@
-                @* <p>@Match.Teams.ToArray()[0].Players.ToArray()[0].Name</p> *@
-                @* <p>@Match.Teams.ToArray()[0].Players.ToArray()[1].Name</p> *@
+                <p>@Match.TeamA.Name</p> 
+               @*  <p>@Match.TeamA.Players.Item1</p>
+                <p>@Match.TeamA.Players.Item2</p> *@
             </div>
             <div class="score">
-                @ScoreA - @ScoreB
+                @Match.ScoreA - @Match.ScoreB
             </div>
             <div class="team">
-                @* <p>@Match.Teams.ToArray()[1].Name</p> *@
-                @* <p>@Match.Teams.ToArray()[1].Players.ToArray()[0].Name</p> *@
-                @* <p>@Match.Teams.ToArray()[1].Players.ToArray()[1].Name</p> *@
+                <p>@Match.TeamB.Name</p>
+               @*  <p>@Match.TeamB.Players.Item1</p>
+                <p>@Match.TeamB.Players.Item2</p> *@
             </div>
         </div>
-        @switch (_matchState)
+        @switch (Match.State)
         {
             case MatchState.WaintingForStart:
                 <div class="space"></div>
@@ -40,10 +41,4 @@
     </CardBody>
 </Card>
 
-<EditScoreModal Match="@Match" ScoreA="@ScoreA" ScoreB="@ScoreB" OnModalReady="@HandleModalReady" OnConfirmed="@HandleScoreConfirmed"></EditScoreModal>
-
-@* <Modal @ref="_modal" title="Modal title" IsVerticallyCentered="true">
-    <BodyTemplate>
-        This is a vertically centered modal.
-    </BodyTemplate>
-</Modal> *@
+<EditScoreModal Match="@Match" OnModalReady="@HandleModalReady" OnConfirmed="@HandleScoreConfirmed"></EditScoreModal>
