add tournament settings page

--- a/Web/BattleJop.Web/Components/Pages/Home.razor
+++ b/Web/BattleJop.Web/Components/Pages/Home.razor
@@ -7,8 +7,8 @@
 <div class="home">
     <h1 class="title">J.O.P</h1>
     <div class="button-list">
-        <button class="golden-button" @onclick="CreateTournamentAsync">
-            Commencer un tournoi
+        <button class="golden-button" @onclick="GoToCreation">
+            Créer un tournoi
         </button>
         <div class="spacer"></div>
         <button class="golden-button" @onclick="GoToRound">
@@ -16,6 +16,3 @@
         </button>
     </div>
 </div>
-
-
-<InitTournamentModal OnModalReady="@HandleModalReady"></InitTournamentModal>
