--- a/Web/BattleJop.Web/Components/Pages/Home.razor
+++ b/Web/BattleJop.Web/Components/Pages/Home.razor
@@ -6,6 +6,7 @@
 
 <div class="home">
     <h1 class="title">J.O.P</h1>
+    <img class="logo" src="images/Logo.svg" alt="JOP"/>
     <div class="button-list">
         <button class="golden-button" @onclick="GoToCreation">
             Créer un tournoi
