Add ranking page

--- a/Web/BattleJop.Web/Components/Pages/Round/Round.razor
+++ b/Web/BattleJop.Web/Components/Pages/Round/Round.razor
@@ -1,11 +1,16 @@
 ﻿@page "/round"
 @using BattleJop.Web.Components.Cards
+@using BattleJop.Web.Enum
 @rendermode InteractiveServer
 @inject TournamentApiClient TournamentApi
 
 <PageTitle>Manche</PageTitle>
 
-<h1>Manche @_round.RunningOrder</h1>
+<div class="header-container">
+    <h1>Manche @_round.RunningOrder</h1>
+    <img src="images/RankingIcon.svg" alt="Ranking" onclick="@CheckRanking" />
+</div>
+
 
 <div class="round-grid">
     @foreach (var match in _round.Matches)
@@ -13,3 +18,13 @@
         <MatchCard Match="match"></MatchCard>
     }
 </div>
+
+<div class="spacer"></div>
+
+
+@if(_round.Matches.All(m => m.State == MatchState.Ended))
+{
+    <div class="center-zone">
+        <button class="golden-button" onclick="@EndRound">Terminer la manche</button>
+    </div>
+}
