--- a/Web/BattleJop.Web/Components/Pages/Round/Round.razor.css
+++ b/Web/BattleJop.Web/Components/Pages/Round/Round.razor.css
@@ -1,7 +1,24 @@
-﻿h1 {
-    text-align: center;
-    font-size: xx-large;
+﻿.header-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 2rem 0;
 }
+
+    .header-container h1 {
+        text-align: center;
+        font-size: xx-large;
+        margin: 0;
+        flex-grow: 1;
+    }
+
+    .header-container img {
+        width: 3rem;
+        position: absolute;
+        right: 0;
+        cursor: pointer;
+    }
 
 .round-grid {
     display: grid;
@@ -12,4 +29,9 @@
     .round-grid {
         grid-template-columns: 1fr 1fr;
     }
+}
+
+.center-zone{
+    display:flex;
+    justify-content:center
 }
