connect front to API

--- a/Web/BattleJop.Web/Components/Pages/Home.razor
+++ b/Web/BattleJop.Web/Components/Pages/Home.razor
@@ -4,16 +4,22 @@
 
 <PageTitle>Home</PageTitle>
 
-<div class="home">
-    <h1 class="title">J.O.P</h1>
-    <img class="logo" src="images/Logo.svg" alt="JOP"/>
-    <div class="button-list">
-        <button class="golden-button" @onclick="GoToCreation">
-            Créer un tournoi
-        </button>
-        <div class="spacer"></div>
-        <button class="golden-button" @onclick="GoToRound">
-            Suivre le tournoi en cours
-        </button>
+@if(_isLoading)
+{
+    <Loader></Loader>
+}
+else{
+    <div class="home">
+        <h1 class="title">J.O.P</h1>
+        <img class="logo" src="images/Logo.svg" alt="JOP"/>
+        <div class="button-list">
+            <button class="golden-button" @onclick="GoToCreation">
+                Créer un tournoi
+            </button>
+            <div class="spacer"></div>
+            <button class="golden-button" @onclick="GoToRoundAsync">
+                Suivre le tournoi en cours
+            </button>
+        </div>
     </div>
-</div>
+}
