--- a/Web/BattleJop.Web/Components/Cards/MatchCard.razor
+++ b/Web/BattleJop.Web/Components/Cards/MatchCard.razor
@@ -41,4 +41,4 @@
     </CardBody>
 </Card>
 
-<EditScoreModal Match="@Match" OnModalReady="@HandleModalReady" OnConfirmed="@HandleScoreConfirmed"></EditScoreModal>
+<EditScoreModal Match="@Match" OnModalReady="@HandleModalReady" OnConfirmed="@HandleScoreConfirmedAsync"></EditScoreModal>
